sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:11: error: ';' expected but 'if' found.
		} if (fin==true) return()
                  ^